css little addtion

--- a/login_form_try/index.html
+++ b/login_form_try/index.html
@@ -10,11 +10,11 @@
     <div class="wrapper">
         <h1>Login</h1>
         <form action="">
-        <div class="input-username">
+        <div class="input-box">
             <label for="username">Username</label>
             <input type="text" id="username" placeholder="Username">
         </div>
-        <div class="input-password">
+        <div class="input-box">
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Password">
         </div>
