--- a/login_form_try/index.html
+++ b/login_form_try/index.html
@@ -19,8 +19,7 @@
             <input type="password" id="password" placeholder="Password">
         </div>
         <div class="register-forgot">
-            <input type="checkbox" id="rememberme">
-            <label for="rememberme">Remember me</label>
+            <label for="rememberme"><input type="checkbox" id="rememberme">Remember me</label>
             <a href="#">Forget password</a>
         </div>
         <button type="submit" value="submit" class="submit">Login</button>
