--- a/grading_system/index.html
+++ b/grading_system/index.html
@@ -6,6 +6,27 @@
     <title>Grading System</title>
 </head>
 <body>
-    
+    <nav class="header">
+        <div class="logo"><h1>Grading System</h1></div>
+    </nav>
+    <div class="wrapper">
+        <div class="headtitle">
+            <h1>Grading System</h1>
+            <p>Input you score below:</p>
+        </div>
+        <div class="feature1">
+            <p>Written Works</p>
+            <input type="text">
+        </div>
+        <div class="feature2">
+            <p>Performance Tasks</p>
+            <input type="text">
+        </div>
+        <div class="feature3">
+            <p>Examinations</p>
+            <input type="text">
+        </div>
+        <button>Calculate</button>
+    </div>
 </body>
 </html>
