--- a/grading_system/index.html
+++ b/grading_system/index.html
@@ -15,16 +15,40 @@
             <p>Input you score below:</p>
         </div>
         <div class="feature1">
-            <p>Written Works</p>
-            <input type="text">
+            <table class="written_task_table">
+                <tr>
+                    <th>Written Works</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td><input type="text"></td>
+                    <td>Edit|Delete|Add</td>
+                </tr>
+            </table>
         </div>
         <div class="feature2">
-            <p>Performance Tasks</p>
-            <input type="text">
+            <table class="performance_task_table">
+                <tr>
+                    <th>Performance Tasks</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td><input type="text"></td>
+                    <td>Edit|Delete|Add</td>
+                </tr>
+            </table>
         </div>
         <div class="feature3">
-            <p>Examinations</p>
-            <input type="text">
+            <table class="exam_table">
+                <tr>
+                    <th>Examination</th>
+                    <th>Action</th>
+                </tr>
+                <tr>
+                    <td><input type="text"></td>
+                    <td>Edit|Delete|Add</td>
+                </tr>
+            </table>
         </div>
         <button>Calculate</button>
     </div>
