--- a/grading_system/index.html
+++ b/grading_system/index.html
@@ -5,6 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grading System</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            margin-top: 20px;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #f2f2f2;
+        }
+
+        tr:hover {
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
 <body>
     <nav class="header">
@@ -23,7 +44,7 @@
                 </tr>
                 <tr>
                     <td><input type="text"></td>
-                    <td>Edit|Delete|Add</td>
+                    <td>Add</td>
                 </tr>
             </table>
         </div>
@@ -35,7 +56,7 @@
                 </tr>
                 <tr>
                     <td><input type="text"></td>
-                    <td>Edit|Delete|Add</td>
+                    <td>Add</td>
                 </tr>
             </table>
         </div>
@@ -47,7 +68,7 @@
                 </tr>
                 <tr>
                     <td><input type="text"></td>
-                    <td>Edit|Delete|Add</td>
+                    <td>Add</td>
                 </tr>
             </table>
         </div>
