--- a/movie_app/index.html
+++ b/movie_app/index.html
@@ -12,7 +12,7 @@
         <a class="active" href="#">Movie Site</a>
         <div class="search-container">
             <form role="search" id="form">
-                <input type="search" id="query" name="q" placeholder="Search...">
+                <input type="search" class="query" id="query" name="q" placeholder="Search...">
             </form>
         </div>
     </div>
